--- a/src/ducks/balance/components/GroupPanel.styl
+++ b/src/ducks/balance/components/GroupPanel.styl
@@ -1,16 +1,23 @@
+@require 'settings/breakpoints'
+
 .GroupPanelSummary__content
     display flex
     flex 1
-    justify-content space-between
+    align-items center
 
-    &::before
-        content ''
-        position absolute
-        background-color transparent
-        left 36px
-        top 0
-        right 0
-        bottom 0
+.GroupPanelSummary__labelBalanceWrapper
+    position relative
+    display flex
+    height 100%
+    flex 1
+    justify-content space-between
+    align-items center
 
 .GroupPanelSummary__figureCurrency
     color inherit
+
+.GroupPanelSummary__switch
+    margin-left 0.5rem
+
+    +small-screen('min')
+        margin-left 0.8125rem
