chore: Bump to v0.11.8
feat: Use node instead of babel-node

feat: Check if file exists before rsync

fix: Handle async errors

feat: Add logs when creating archive

chore(deps): update dependency cozy-ach to v1.10.0

chore: Bump to v0.11.9

fix(History): Check that transaction exists

chore(publish): Fix remoteFileExists

feat(transactions): Use realisationDate if the account is CreditCard

feat(TransactionSelectDates): Handle transaction in the future

chore(fixtures): Add credit card account demo fixtures

chore(publish): Use cozy-app-publish instead of custom script

docs(LineChart): Add jsdoc blocks

feat(LineChart): Update scales on resize

refactor: Move updateAxis after createAxis

fix: Remove stroke-dash attributes after animation

refactor: Remove unnecessary function

refactor: Reorder functions

fix: Save date not coordinate

feat: Update tooltip x position from itemX

feat: Split / Create an update function for all elements

refactor: Optimize render and update elements

refactor: Use bisect to shorten the search item

refactor: Use lodash memoize

chore: Add type property to manifest

feat: Use format date from cozy-ui

chore: Remove deploy on specific instances after publish

fix: Second safeguard for local categ by reweighting amounts tokens

fix: :nail_care: Add banking category to update redirection

docs: Explained the reweighting of naive bayes parameters

refactor(GroupPanel): Remove useless require

fix(SelectDates): Disabled arrow color

feat(GroupPanel): Add unchecked styles

fix(AccountRow): Half opacity when disabled

fix: Update cozy-bar token

feat: Add triggers on offline doctype

fix: Update store with new token

feat(account): Update account types mappings

docs: Account types mapping

fix(AccountsSettings): Use getAccountType helper

fix(AccountSettings): Use getAccountType helper

feat: Turn on balance panels UI by default

fix: Padding when no movements

feat: Show konnector update info only on balance page

refactor: Remove unused 

--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -6,10 +6,11 @@
     padding-bottom .5rem
     text-align center
     color white
-    min-height 213px
+    flex-basis 213px
+    flex-shrink 0
 
     +small-screen()
-        min-height 159px
+        flex-basis 159px
         padding-top: .5rem
         padding-bottom 0
 
