--- a/src/ducks/balance/components/GroupPanel.styl
+++ b/src/ducks/balance/components/GroupPanel.styl
@@ -1,5 +1,3 @@
-@require 'settings/breakpoints'
-
 .GroupPanelSummary__content
     display flex
     flex 1
@@ -15,3 +13,11 @@
 
 .GroupPanelSummary__figureCurrency
     color inherit
+
+.GroupPanelSummary__icon
+    color var(--charcoalGrey)
+
+.GroupPanelSummary--unchecked
+    .GroupPanelSummary__content,
+    .GroupPanelSummary__icon
+        color var(--coolGrey)
