feat(GroupPanel): Add unchecked styles

--- a/src/ducks/balance/components/GroupPanel.styl
+++ b/src/ducks/balance/components/GroupPanel.styl
@@ -13,3 +13,11 @@
 
 .GroupPanelSummary__figureCurrency
     color inherit
+
+.GroupPanelSummary__icon
+    color var(--charcoalGrey)
+
+.GroupPanelSummary--unchecked
+    .GroupPanelSummary__content,
+    .GroupPanelSummary__icon
+        color var(--coolGrey)
