--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -77,6 +77,7 @@
 .AccountRow__figureSwitchWrapper
     display flex
     justify-content flex-end
+    overflow initial // let the switch have a big click area
 
 .AccountRow--disabled
     color var(--coolGrey)
