--- a/src/ducks/balance/components/GroupPanel.styl
+++ b/src/ducks/balance/components/GroupPanel.styl
@@ -14,6 +14,11 @@
 .GroupPanelSummary__figureCurrency
     color inherit
 
+.GroupPanelSummary__caption
+    text-transform none
+    font-weight normal
+    margin-top 0.125rem
+
 .GroupPanelSummary__icon
     color var(--charcoalGrey)
 
