feat: Increase click area expand icon

--- a/src/styles/utilities.styl
+++ b/src/styles/utilities.styl
@@ -29,3 +29,12 @@
 
     .u-full-width
         width 100%
+
+    .u-click-xl::after
+      width 130%
+      height 130%
+      top -15%
+      left -15%
+      content '\00a0'
+      display block
+      position absolute
