--- a/src/styles/palette.styl
+++ b/src/styles/palette.styl
@@ -8,3 +8,4 @@
     // TODO: refactoring after new color on cozy-ui
     --primary-contrast-text white
     --primary-light #5c9df5 // lighten(dodgerBlue, 24)
+    --primary-dark #094597 // darken(dodgerBlue, 24)
