feat(Title): Add !important on theme styles
This avoids a CSS ordering problem causing the theme styles not to be
applied

--- a/src/components/Title/Title.styl
+++ b/src/components/Title/Title.styl
@@ -5,10 +5,10 @@
     margin 0 auto
 
 .TitleColor_default
-    color var(--black)
+    color var(--black) !important
 
 .TitleColor_primary
-    color var(--primary-contrast-text)
+    color var(--primary-contrast-text) !important
 
 +small-screen()
     .Title
