fix(BalancePanels): Higher actions buttons style specificity
On mobile, the cozy-bar's cozy-ui styles are loaded after our app CSS,
so it overrides our customisations.

--- a/src/ducks/balance/BalancePanels.styl
+++ b/src/ducks/balance/BalancePanels.styl
@@ -15,7 +15,7 @@
         padding-right 0
         justify-content flex-end
 
-.BalancePanels__action
+.BalancePanels__action.BalancePanels__action
     flex 1
     text-align center
     max-width none
