feat(TransactionHeader): Select dates overlaps chart gradient

--- a/src/ducks/transactions/TransactionsPage.styl
+++ b/src/ducks/transactions/TransactionsPage.styl
@@ -18,3 +18,12 @@
             &
                 margin 0
                 flex-basis 50%
+
+.TransactionsHeader__chart
+    margin-bottom -72px
+
+    +small-screen()
+        margin-bottom -52px
+
+.TransactionsHeader__selectDates
+    position relative
