fix: :fire: Avoid the glitch while loading the app
The users may have a flash of unstyled content without this fix:
browsers don't wait that the CSSOM is ready to execute <script> with the
defer attribute. It means that they can render before the CSS have been
parser, and SVG icons are often rendered on the full screen in that
case.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -21,9 +21,6 @@
   {{.CozyClientJS}}
   {{.CozyBar}}
   <% } %>
-  <%  if (__STACK_ASSETS__ || (__DEV__ && __TARGET__ !== 'mobile')) { %>
-  <script src="//{{.Domain}}/assets/js/piwik.js" defer></script>
-  <% } %>
 </head>
 <div
   role="application"
@@ -41,4 +38,7 @@
 ></div>
 <% if (__TARGET__ === 'mobile') { %>
 <div id="logout-modal" style="position: relative; z-index: 100;"></div>
+<% } %>
+<%  if (__STACK_ASSETS__ || (__DEV__ && __TARGET__ !== 'mobile')) { %>
+<script src="//{{.Domain}}/assets/js/piwik.js" async></script>
 <% } %>
