--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,7 +5,6 @@
   <title>Cozy Banks</title>
   <% if (__TARGET__ !== 'mobile') { %>
   {{.ThemeCSS}}
-  <link rel="stylesheet" type="text/css" href="//{{.Domain}}/assets/fonts/fonts.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
@@ -20,6 +19,8 @@
   <% } else if (__STACK_ASSETS__) { %>
   {{.CozyClientJS}}
   {{.CozyBar}}
+  <% } else { %>
+  <link rel="stylesheet" type="text/css" href="//{{.Domain}}/assets/fonts/fonts.css">
   <% } %>
 </head>
 <div
