--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -7,6 +7,7 @@
     height 4rem
     align-items center
     padding-left 1rem
+    padding-right 0.5rem
     background-color white
     color var(--charcoalGrey)
     cursor pointer
