fix: Correct mq to target mobile

--- a/src/ducks/balance/components/AccountRow.styl
+++ b/src/ducks/balance/components/AccountRow.styl
@@ -34,7 +34,7 @@
     &:not(:first-child)
         margin-left 1rem
 
-    +small-screen('min')
+    +small-screen()
         // On mobile the label is twice as large as the other
         // column
         &:first-child
