fix: Disable selection on iOS

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -6,6 +6,9 @@
 @require '~styles/variables.styl'
 @require './palette.styl'
 
+html
+    -webkit-touch-callout none
+
 h4
     margin-top 0
     margin-bottom 1rem
