fix: Increase selector specificity
Otherwise styles are overriden

--- a/src/components/SelectDates/SelectDates.styl
+++ b/src/components/SelectDates/SelectDates.styl
@@ -97,8 +97,7 @@ select-date-height-small = 2.75rem
         .SelectDates__SelectMonthContainer
             flex-grow 2
 
-    .SelectDates__chip
-        background-color transparent
+    .SelectDates__chip.SelectDates__chip
         margin-bottom 0
         margin-right 0
         padding 0
@@ -109,18 +108,17 @@ select-date-height-small = 2.75rem
             width 100%
             margin-right -1.3rem
 
-    .SelectDates__separator
+    .SelectDates__separator.SelectDates__separator
         height 1.5rem
         margin-left 0
         margin-right 0
 
-    .SelectDates__buttons
+    .SelectDates__buttons.SelectDates__buttons
         display flex
         align-items center
 
-    .SelectDates__Button
+    .SelectDates__Button.SelectDates__Button
         width auto
-        background-color transparent
         color coolGrey
         padding-left 0.875rem
         padding-right 0.875rem
