--- a/src/components/Select/styles.styl
+++ b/src/components/Select/styles.styl
@@ -35,7 +35,7 @@ select-date-height-small=2.75rem
             justify-content center
             padding-right 0.75rem
 
-    .cz__menu
+    .cz__menu.cz__menu
         // Not to have the years inside the menu be truncated
         // We should have a better solution but I did not find
         // why the content inside the menu was not automatically
