fix: Style on mobile
cozy-bar style overload app style

--- a/src/styles/buttons.styl
+++ b/src/styles/buttons.styl
@@ -1,6 +1,6 @@
 // TODO should be moved to cozy-ui when we update
 // to v4
-.btn--no-outline
+.btn--no-outline.btn--no-outline
     background transparent
     color dodgerBlue
     border 0
