--- a/src/ducks/transactions/TransactionsPage.styl
+++ b/src/ducks/transactions/TransactionsPage.styl
@@ -28,3 +28,7 @@
 .TransactionsHeader__selectDatesContainer
     position relative
     padding-bottom 12px
+
+.TransactionHeader__accountSwitchContainer
+    display flex
+    align-items center
