refactor: Use the good CSS variable names for color
The colors are named like primaryColor, primaryColorLight, but we were
using names like primary, primary-color-light...

--- a/src/components/Breadcrumb/style.styl
+++ b/src/components/Breadcrumb/style.styl
@@ -16,7 +16,7 @@
     &.default
         color charcoalGrey
     &.primary
-        color var(--primary-contrast-text)
+        color var(--primaryContrastTextColor)
 
 .Breadcrumb__previousItems
     display flex
