--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -13,7 +13,7 @@
     background-color var(--white)
 
 .HeaderColor_primary
-    background-color var(--primary)
+    background-color var(--primaryColor)
 
 .HeaderColor_primary.HeaderFixed
     box-shadow 0 2px 4px 0 rgba(0, 0, 0, 0.24), 0 0 4px 0 rgba(0, 0, 0, 0.16)
