--- a/src/components/KonnectorUpdateInfo/styles.styl
+++ b/src/components/KonnectorUpdateInfo/styles.styl
@@ -19,4 +19,4 @@
 .KonnectorUpdateInfo__message a
     font-weight bold
     text-decoration none
-    color var(--primary)
+    color var(--primaryColor)
