--- a/src/components/Table/styles.styl
+++ b/src/components/Table/styles.styl
@@ -10,8 +10,8 @@
 
     &.primary
         thead
-            background-color var(--primary-light)
-            color var(--primary-contrast-text)
+            background-color var(--primaryColorLight)
+            color var(--primaryContrastTextColor)
             padding .5rem 0
             tr
                 border-bottom-width 0
@@ -23,7 +23,7 @@
                 &:first-child
                     padding-left 2rem
             td + td
-                border-left 1px solid var(--primary)
+                border-left 1px solid var(--primaryColor)
 
     thead, tbody
         display   flex
