--- a/src/components/Title/Title.styl
+++ b/src/components/Title/Title.styl
@@ -8,7 +8,7 @@
     color var(--black) !important
 
 .TitleColor_primary
-    color var(--primary-contrast-text) !important
+    color var(--primaryContrastTextColor) !important
 
 +small-screen()
     .Title
