--- a/src/ducks/account/AccountSwitch.styl
+++ b/src/ducks/account/AccountSwitch.styl
@@ -156,7 +156,7 @@
     color black
 
 .DownArrowColor_primary
-    color var(--primary-contrast-text)
+    color var(--primaryContrastTextColor)
 
 .AccountSwitch--small .DownArrow
     margin-left 0.375rem
