--- a/src/ducks/categories/CategoriesHeader.styl
+++ b/src/ducks/categories/CategoriesHeader.styl
@@ -24,10 +24,10 @@
     &.primary
         padding-top 1rem
         padding-bottom 1rem
-        color var(--primary-contrast-text)
+        color var(--primaryContrastTextColor)
 
         input + label
-            background-color var(--primary-light)
+            background-color var(--primaryColorLight)
 
         input:checked + label
             background-color emerald
