--- a/src/ducks/transactions/header/TableHead.styl
+++ b/src/ducks/transactions/header/TableHead.styl
@@ -5,7 +5,7 @@
     marginRight -2rem
 
 .TableHead_primary
-    background-color var(--primary-light)
+    background-color var(--primaryColorLight)
 
     thead
         tr
@@ -17,7 +17,7 @@
                 font-size .75rem
                 line-height 1rem
                 font-weight bold
-                color var(--primary-contrast-text)
+                color var(--primaryContrastTextColor)
 
             td + td
-                border-left 1px solid var(--primary)
+                border-left 1px solid var(--primaryColor)
