--- a/src/ducks/balance/Balance.styl
+++ b/src/ducks/balance/Balance.styl
@@ -10,7 +10,7 @@
         left 0
         right 0
         height 44px
-        background-color var(--primary)
+        background-color var(--primaryColor)
 
     +small-screen()
         padding-left 0.5rem
