refactor: Rename primary-dark to primaryColorDark
This way it uses the good format

--- a/src/styles/palette.styl
+++ b/src/styles/palette.styl
@@ -2,7 +2,4 @@
 
 // @stylint off
 :root
-
-    // TODO: refactoring after new color on cozy-ui
-    --primary-contrast-text white
-    --primary-dark #0d60d1 // darken(dodgerBlue, 12)
+    --primaryColorDark #0d60d1 // darken(dodgerBlue, 12)
