refactor(styles): Use relative requires

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,10 +1,10 @@
 @require 'generic/normalize.styl'
 @require 'elements/defaults.styl'
-@require './utilities.styl'
-@require './text.styl'
+@require 'utilities.styl'
+@require 'text.styl'
 @require 'settings/breakpoints'
 @require '~styles/variables.styl'
-@require './palette.styl'
+@require 'palette.styl'
 
 html
     -webkit-touch-callout none
