refactor(Header): Use CSS variables for background colors
I had to set variables on body instead of :root because themes variables
are set on body. If we set it on :root, then we don't retrieve the right
--primaryColor for example, since we get the one on :root (cascade...)

--- a/src/components/Header/Header.styl
+++ b/src/components/Header/Header.styl
@@ -10,10 +10,10 @@
         top 3rem
 
 .HeaderColor_default
-    background-color var(--white)
+    background-color var(--headerDefaultBackgroundColor)
 
 .HeaderColor_primary
-    background-color var(--primaryColor)
+    background-color var(--headerPrimaryBackgroundColor)
 
 .HeaderColor_primary.HeaderFixed
     box-shadow 0 2px 4px 0 rgba(0, 0, 0, 0.24), 0 0 4px 0 rgba(0, 0, 0, 0.16)
