--- a/src/styles/palette.styl
+++ b/src/styles/palette.styl
@@ -1,5 +1,7 @@
 @require 'settings/palette.styl'
 
 // @stylint off
-:root
+body
     --primaryColorDark #0d60d1 // darken(dodgerBlue, 12)
+    --headerDefaultBackgroundColor var(--white)
+    --headerPrimaryBackgroundColor var(--primaryColor)
