refactor(Tooltip): Use historyTooltipTextColor

--- a/src/components/Chart/Tooltip.styl
+++ b/src/components/Chart/Tooltip.styl
@@ -1,7 +1,7 @@
 .Tooltip
     position absolute
     background-color white
-    color dodgerBlue
+    color var(--historyTooltipTextColor)
     border-radius 2px
     font-size 0.6875rem
     padding-left 2px
