--- a/src/ducks/balance/History.styl
+++ b/src/ducks/balance/History.styl
@@ -1,6 +1,5 @@
 .HistoryChart
     overflow-y auto
-    background-color dodgerBlue
     margin 0
 
 .History .HistoryChart
@@ -11,6 +10,6 @@
 
 .HistoryChart__tooltipBalance
     font-weight bold
-    border-left 1px solid dodgerBlue
+    border-left 1px solid var(--historyTooltipTextColor)
     padding-left 4px
     margin-left 4px
