--- a/src/styles/palette.styl
+++ b/src/styles/palette.styl
@@ -5,3 +5,4 @@ body
     --primaryColorDark #0d60d1 // darken(dodgerBlue, 12)
     --headerDefaultBackgroundColor var(--white)
     --headerPrimaryBackgroundColor var(--primaryColor)
+    --historyTooltipTextColor var(--primaryColor)
