refactor(HistoryChart): Use historyGradientColor variable

--- a/src/styles/palette.styl
+++ b/src/styles/palette.styl
@@ -6,3 +6,4 @@ body
     --headerDefaultBackgroundColor var(--white)
     --headerPrimaryBackgroundColor var(--primaryColor)
     --historyTooltipTextColor var(--primaryColor)
+    --historyGradientColor var(--primaryColor)
